--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name=".info.InformationDetailActivity"
+            android:label="@string/info">
+            
+        </activity>
     </application>
 
 </manifest>
