--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,16 @@
     package="com.narkii.security"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
-
+	
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
