--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,16 +22,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.narkii.security.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape" 
-            android:windowSoftInputMode="stateHidden">
+        <activity 
+            android:name="com.narkii.security.LoginActivity"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="stateHidden"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+            
+        <activity
+            android:name="com.narkii.security.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" 
+            android:windowSoftInputMode="stateHidden">
+            
         </activity>
         <activity
             android:name=".info.InformationDetailActivity"
